--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,6 +107,37 @@ section video {
      object-fit: cover;
 }
 
+section .content {
+  position: relative;
+  z-index: 10;
+  text-align: center;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transition-delay: 1s;
+          transition-delay: 1s;
+}
+
+section .content h2 {
+  position: relative;
+  color: white;
+  font-size: 10vw;
+  line-height: 0.55em;
+  text-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+section .content h2 span {
+  font-size: 0.2em;
+  font-weight: 300;
+  letter-spacing: 5px;
+  background: white;
+  color: black;
+  padding: 0 10px;
+  text-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  text-transform: uppercase;
+}
+
 .glass {
   position: absolute;
   top: 0;
@@ -120,5 +151,15 @@ section video {
           box-shadow: 10px 0 15px rgba(0, 0, 0, 0.1);
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  -webkit-transition-delay: 1s;
+          transition-delay: 1s;
+}
+
+section.active .glass {
+  width: 100%;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
 }
 /*# sourceMappingURL=style.css.map */
