--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -80,6 +80,33 @@ section{
         height: 100%; 
         object-fit: cover;
     }
+    .content{
+        position: relative;
+        z-index: 10; 
+        text-align: center;
+        transition: 0.5s;
+        transition-delay: 1s;
+
+        h2{
+            position: relative;
+            color: white;
+            font-size: 10vw;
+            line-height: 0.55em;
+            text-shadow: 0 5px 5px rgba(0,0,0,0.2);
+            span{
+                font-size: 0.2em;
+                font-weight: 300;
+                letter-spacing: 5px;
+                background: white;
+                color: black;
+                padding: 0 10px;
+                text-shadow: 0 5px 5px rgba(0,0,0,0.2);
+                box-shadow: 0 5px 5px rgba(0,0,0,0.2);
+                text-transform: uppercase;
+            }
+        }
+    }
+
 }
 .glass{
     position: absolute;
@@ -91,4 +118,10 @@ section{
     backdrop-filter: blur(15px);
     box-shadow: 10px 0 15px rgba(0,0,0,0.1);
     transition: 0.5s;
+    transition-delay: 1s;
+}
+section.active .glass{
+    width: 100%;
+    backdrop-filter: blur(20px);
+    transition-delay: 0s;
 }
