Added Social Media Buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 * {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Orbitron", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 section {
@@ -107,6 +108,35 @@ section video {
      object-fit: cover;
 }
 
+section .social-media {
+  position: absolute;
+  bottom: 40px;
+  right: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  z-index: 100;
+}
+
+section .social-media li {
+  list-style: none;
+  margin: 5px;
+  padding: 0 6px;
+  background: white;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+section .social-media li a {
+  color: black;
+  text-decoration: none;
+  display: inline-block;
+  letter-spacing: 2px;
+  font-weight: 500;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
 section .content {
   position: relative;
   z-index: 10;
@@ -123,6 +153,7 @@ section .content h2 {
   font-size: 10vw;
   line-height: 0.55em;
   text-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  font-family: "Orbitron", sans-serif;
 }
 
 section .content h2 span {
@@ -159,6 +190,15 @@ section.active .glass {
   width: 100%;
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+}
+
+section.active .content {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateX(-200px);
+          transform: translateX(-200px);
   -webkit-transition-delay: 0s;
           transition-delay: 0s;
 }
