--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Orbitron", sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 section{
     position: relative;
@@ -80,6 +82,29 @@ section{
         height: 100%; 
         object-fit: cover;
     }
+    .social-media{
+        position: absolute;
+        bottom: 40px;
+        right: 100px; 
+        display: flex;
+        z-index: 100;
+        li{
+            list-style: none;
+            margin: 5px;
+            padding: 0 6px;
+            background: white;
+            transition: 0.5s;
+            a{
+                color: black; 
+                text-decoration: none;
+                display: inline-block;
+                letter-spacing: 2px;
+                font-weight: 500;
+                font-size: 12px;
+                text-transform: uppercase;
+            }
+        }
+    }
     .content{
         position: relative;
         z-index: 10; 
@@ -93,6 +118,7 @@ section{
             font-size: 10vw;
             line-height: 0.55em;
             text-shadow: 0 5px 5px rgba(0,0,0,0.2);
+            font-family: "Orbitron", sans-serif;
             span{
                 font-size: 0.2em;
                 font-weight: 300;
@@ -120,8 +146,16 @@ section{
     transition: 0.5s;
     transition-delay: 1s;
 }
-section.active .glass{
-    width: 100%;
-    backdrop-filter: blur(20px);
-    transition-delay: 0s;
+section.active{
+    .glass{
+        width: 100%;
+        backdrop-filter: blur(20px);
+        transition-delay: 0s;
+    }
+    .content{
+        opacity: 0;
+        visibility: hidden;
+        transform: translateX(-200px); 
+        transition-delay: 0s;
+    }
 }
