--- a/static/css/style.css
+++ b/static/css/style.css
@@ -195,20 +195,19 @@ section .navigation li {
 }
 
 section .navigation li a {
-  color: black;
+  color: white;
   font-size: 1.5em;
   letter-spacing: 4px;
   text-decoration: none;
-  font-weight: 300;
+  font-weight: 900;
   text-transform: uppercase;
-  background: white;
+  background: rgba(0, 0, 0, 0);
   padding: 4px 10px;
   display: inline-block;
 }
 
 section .navigation li a:hover {
-  background: black;
-  color: white;
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .glass {
